[PRISM] Allow case/when to be indented with no warning

Fixes [Bug #20731]